Fix additional compiler warnings and improve build system
Reduce javac warnings from 34 → 20 through systematic cleanup of
deprecated APIs and generics issues, plus Gradle configuration improvements.

Fixed warnings:
• Update SHIFT_MASK → SHIFT_DOWN_MASK in AnnotationTable
• Add generics to AudioFileList/AudioFileListModel (AudioFile type)
• Fix modifier mask deprecations in SysInfo (META_MASK, ALT_MASK, etc.)
• Replace deprecated URL constructor with URI.toURL() approach
• Update getMenuShortcutKeyMask() → getMenuShortcutKeyMaskEx()
• Fix Gradle configuration cache compatibility in checkJavaVersion

Build improvements:
• Add command to view all warnings despite Gradle caching in CLAUDE.md
• Comment update for compiler configuration

Remaining 20 warnings are complex constructor patterns, JNA audio APIs,
and cell renderer inheritance constraints not worth fixing.